# mhc_genotyper

./: .gitignore  LICENSE  main.py  mhc_genotyper.ipynb  pyproject.toml  readme.md
ref/: MCM_MHC-all_mRNA-MiSeq_singles-RENAME_20Jun16.fasta  Mafa_MiSeq-IPD_17.06.01_2.2.0.0_plus_SP.fasta  SBT195_MHCII_primers_2Sep13.fasta
